# ConvAA2lig

./: LICENSE.txt  README.md  UNINSTALL.sh  install.sh  setup.cfg  setup.py
src/: ConvAA2lig.py  __init__.py
src/ConvAA2lig.egg-info/: PKG-INFO  SOURCES.txt
test/: test_ConvAA2lig.py
