[metadata]
name = ConvAA2lig
version = 0.0.1
author = Moonipur
author_email = moo_sutthittha@hotmail.com
description = The ConvAA2lig is a simple convert PDB file from Amino acid name to your Ligand name.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = <=3.10

[options.packages.find]
where = src